# Fairlens

./: Dockerfile  FLOWCHART.md  LICENSE  Makefile  README.md  alembic.ini  data.yaml  detectify.db  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  startup.md
alembic/: env.py
alembic/versions/: 001_create_detections.py
configs/: base.yaml  infer.yaml  train.yaml
firmware/esp32_security_monitor/: esp32_security_monitor.ino
notebooks/: exploration.ipynb  inference_demo.ipynb
runs/detect/train/: args.yaml  results.csv
scripts/: check_cameras.py  dataset_tool.py  download_coco.sh  export_onnx.sh  init_db.py  predict_image.py  predict_video.py
src/detectify/: __init__.py  __main__.py  config.py  inference.py  train.py  version.py
src/detectify/api/: __init__.py  server.py
src/detectify/data/: __init__.py  coco.py  transforms.py
src/detectify/db/: __init__.py  crud.py  models.py  session.py
src/detectify/evaluation/: __init__.py  metrics.py  visualizer.py
src/detectify/model/: __init__.py  base.py  tf_detector.py  yolo.py
src/detectify/utils/: __init__.py  helpers.py  iot.py  logger.py  notifications.py
tests/: conftest.py  test_api.py  test_db.py  test_helpers.py  test_inference_cli.py  test_model.py
